--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: M4. Video Analysis
-description: We are the group 3
+title: Video surveillance for road traffic monitoring
+description: Car tracking and speed estimator
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
 theme: jekyll-theme-cayman
